2007-07-29  Kimit Yada  <kimitto@gmail.com>  (tiny change)

	* emacs-lisp/copyright.el (copyright-update-year, copyright-update)
	(copyright-fix-years, copyright): Correctly handle the case where
	copyright-limit is nil.

2007-07-28  Konstantin Novitsky  <knovitsk@Bear.com>  (tiny change)

	* progmodes/python.el (run-python): Fix path separator under w32.

2007-07-30  Richard Stallman  <rms@gnu.org>

	* emacs-lisp/lisp-mode.el (emacs-lisp-mode-syntax-table):
	Treat non-break space as whitespace in Lisp.

2007-07-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc.el (vc-dired-hook): Use inhibit-read-only.

	* progmodes/compile.el (compilation-forget-errors):
	Reset compilation-auto-jump-to-next.

2007-07-30  Michael Olson  <mwolson@gnu.org>

	* cus-edit.el (custom-group-save): Fix void function definition
	error.  Thanks to Zhang Wei for the report.

	* ps-print.el: Check in trivial changes to the autoloads section
	caused by the build process.  These autoloads really ought to be
	placed in a separate file, methinks.

2007-07-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/calendar.el (calendar-mode): Make sure
	displayed-(month|year) are set.
	(calendar-basic-setup): Display buffer before adjusting window sizes.
	(generate-calendar-window): Use inhibit-read-only.  Simplify.
	Generate buffer and set displayed-month and displayed-year before
	calling update-calendar-mode-line.

2007-07-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el:
	* tramp-uu.el:
	* trampver.el: Use utf-8 encoding with coding cookie.

	* tramp-cache.el:
	* tramp-fish.el:
	* tramp-ftp.el:
	* tramp-gw.el:
	* tramp-smb.el: Remove coding cookie.

	* tramp.el (tramp-handle-verify-visited-file-modtime):
	Flush buffer file-name's file property.
	(tramp-handle-file-remote-p): The first parameter is FILENAME.

	* trampver.el: Update release number.

2007-07-29  Juri Linkov  <juri@jurta.org>

	* dired.el (dired-mode-map): Bind C-x C-q to dired-toggle-read-only.