@@ -1,3 +1,7 @@
+2007-07-31  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* pcvs.el (cvs-vc-command-advice): Handle the new fileset case.
+
 2007-07-29  Kimit Yada  <kimitto@gmail.com>  (tiny change)
 
 	* emacs-lisp/copyright.el (copyright-update-year, copyright-update)
